prevent issue that Android 4.1/4.2 canvas draws twice with overflow:hidden (bugid:110032)

--- a/app/cards/stats/sass/style.scss
+++ b/app/cards/stats/sass/style.scss
@@ -7,6 +7,7 @@
 #card-stats {
   position: relative;
   min-height: 320px;
+  overflow: visible;
   .tap-enabled {
     cursor: pointer;
   }
