--- a/app/sass/android.scss
+++ b/app/sass/android.scss
@@ -1,6 +1,6 @@
 .android2,
 .android3,
-.android4-0 {
+.android4 {
   &.move #app {
     display: none;
   }
@@ -13,6 +13,7 @@
   .main-container {
     margin-top: 60px;
     position: static;
+    overflow: visible;
   }
   .menu-main-container {
     position: static;
